--- a/src/app/conta_usuario/adresses/form-address/form-address.component.html
+++ b/src/app/conta_usuario/adresses/form-address/form-address.component.html
@@ -32,7 +32,7 @@
 
     <div class="col-sm-9">
         <mat-form-field>
-            <mat-label> Logradouro </mat-label>
+            <mat-label> Rua </mat-label>
             <input formControlName="rua" matInput placeholder="Rua/Avenida">
         </mat-form-field>
     </div>
