--- a/src/app/inicio/item-details/item-details.component.html
+++ b/src/app/inicio/item-details/item-details.component.html
@@ -75,7 +75,7 @@
                 <div class="boxoc">
                     <mat-form-field class="example-full-width">
                         <mat-label> Alguma observação?</mat-label>
-                        <textarea #observacaoUsuario matInput placeholder="Ex. Digite aqui a observação para o produto..."></textarea>
+                        <textarea style="height: 70px; max-height: 200px;" #observacaoUsuario matInput placeholder="Ex. Digite aqui a observação para o produto..."></textarea>
                     </mat-form-field>
                 </div>
 
