--- a/src/app/inicio/user-registration/input-emailortel/input-emailortel.component.html
+++ b/src/app/inicio/user-registration/input-emailortel/input-emailortel.component.html
@@ -6,12 +6,12 @@
     </div>
     <div class="hu">
         <div class="af">
-            Informe o seu e-mail ou número de celular para continuar
+            Informe seu número de celular para continuar
         </div>
 
         <mat-form-field class="input">
-            <mat-label> Email ou telefone </mat-label>
-            <input matInput placeholder="" #input>
+            <mat-label> Telefone </mat-label>
+            <input matInput placeholder="" #input mask="(00)00000-0000">
         </mat-form-field>
 
         <div>
