--- a/src/app/payment-steps/finish/finish.component.css
+++ b/src/app/payment-steps/finish/finish.component.css
@@ -92,3 +92,29 @@
     margin-top: 6px;
     color: #795548;
 }
+
+.ityorder {
+    border: 1px solid #cccccc8f;
+    border-radius: 4px;
+}
+
+.itemSelectT {
+    height: 28px;
+    width: 29px;
+    background-color: #4CAF50;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    position: absolute;
+    border-radius: 20px;
+    color: wheat;
+    margin-top: 5px;
+    margin-left: -11px;
+    z-index: 1;
+}
+
+.aia {
+    text-decoration: none;
+}
