--- a/src/app/inicio/capa/capa.component.html
+++ b/src/app/inicio/capa/capa.component.html
@@ -41,10 +41,10 @@
                 <a *ngIf="!service.getDadosUsuario().id" mat-button color="primary" (click)="onClickBt1()">
                     <mat-icon>login</mat-icon> Entrar </a>
                 <a *ngIf="service.getDadosUsuario().id" mat-button color="primary" routerLink="/perfil-user">
-                    <mat-icon>login</mat-icon> Perfil </a>
+                    <mat-icon>login</mat-icon> {{ service.getDadosUsuario().nome }} </a>
             </div>
             <div class="hiddenEl">
-                <button mat-button color="primary" routerLink="/finish"><mat-icon>shopping_cart</mat-icon> Sacola </button>
+                <button mat-button color="primary" routerLink="/finish"><mat-icon>shopping_cart</mat-icon> Carrinho </button>
             </div>
         </div>
 
