--- a/src/app/inicio/itens-merchant/itens-merchant.component.html
+++ b/src/app/inicio/itens-merchant/itens-merchant.component.html
@@ -54,8 +54,11 @@
         <div class="col-sm-12 c5 mp0L bMobile">
             <mat-form-field appearance="fill" style="width: 100%;">
                 <mat-label>Filtrar catálogo</mat-label>
-                <mat-select>
-                    <mat-option *ngFor="let item of service.getDadosEmpresa().categorias">
+                <mat-select #catalogoFilter>
+                    <mat-option value="">
+                        Sem filtro
+                    </mat-option>
+                    <mat-option *ngFor="let item of service.getDadosEmpresa().categorias" [value]="item.id">
                         {{ item.nome }}
                     </mat-option>
                 </mat-select>
@@ -67,7 +70,7 @@
 
                 <mat-form-field class="infiltroi">
                     <mat-label> Filtrar item </mat-label>
-                    <input matInput placeholder="Nome do item">
+                    <input matInput placeholder="Nome do item" #filterProduct>
                 </mat-form-field>
 
             </div>
@@ -81,11 +84,10 @@
 
 
     <div class="row mp0R bMobile">
-
-        <div class="col-sm-12 mp0R" *ngFor="let item of service.getDadosEmpresa().categorias">
+        <div class="col-sm-12 mp0R" *ngFor="let item of service.getDadosEmpresa().categorias | name:catalogoFilter.value">
             <div class="aicn col-sm-12"> {{ item.nome }} </div>
             <div class="row mp0R">
-                <div style="padding: 10px;" class="col-sm-6 " *ngFor="let product of item.itens">
+                <div style="padding: 10px;" class="col-sm-6 " *ngFor="let product of item.itens | filterId:filterProduct.value">
                     <div class="item col-sm-12" (click)="openItem(product)">
                         <div class="row">
 
