--- a/src/app/inicio/select-address/select-address.component.html
+++ b/src/app/inicio/select-address/select-address.component.html
@@ -4,14 +4,14 @@
   </button>
 </div>
 <div class="col-sm-12 text-center">
-    <img width="100px" src="../../../assets/images/others/map2.png" alt="">
+    <img style="width: 61px;margin-top: -35px;" src="../../../assets/images/others/map2.png" alt="">
 </div>
 
 <div class="col-sm-12" class="c1">
-    Onde você quer receber seu pedido?
+    Onde quer receber seu pedido?
 </div>
 
-<div class="col-sm-12" style="margin-top: 20px;">
+<!--<div class="col-sm-12" style="margin-top: 20px;">
     <div class="row">
         <div class="col-sm-6">
             <mat-form-field>
@@ -25,7 +25,7 @@
         </div>
         <div class="col-sm-6">
             <mat-form-field>
-                <input [disabled]="!statusCity" type="text" placeholder="Bairros*" aria-label="Number" matInput [matAutocomplete]="matAutocompleteN">
+                <input [disabled]="!statusCity" type="text" placeholder="Bairro" aria-label="Number" matInput [matAutocomplete]="matAutocompleteN">
                 <mat-autocomplete #matAutocompleteN="matAutocomplete">
                     <mat-option *ngFor="let option of neighborhoods" [value]="option.nome" (click)="selectNeigh(option)">
                         {{ option.nome }}
@@ -38,14 +38,13 @@
 
 
 
-</div>
+</div>-->
 
 <div class="col-sm-12" style="overflow: auto;
 height: 150px;">
     <a href="javascript:;" style="text-decoration: none;">
 
-        <button *ngIf="service.getDadosUsuario().endereco.length === 0 &&
-      service.getDadosUsuario().id" mat-flat-button color="warn" (click)="selectAddress()"> Adicionar novo endereço </button>
+        <button class="btaddn" mat-flat-button color="warn" (click)="selectAddress()"> Novo endereço </button>
 
         <div class="itemAddressuser" *ngFor="let item of service.getDadosUsuario().endereco" (click)="selectItemAddressuser(item)">
 
