--- a/src/app/inicio/capa/capa.component.html
+++ b/src/app/inicio/capa/capa.component.html
@@ -27,7 +27,7 @@
           <mat-icon>place</mat-icon>
         </button>
 
-            <button mat-icon-button color="primary" routerLink="/finish">
+            <button mat-icon-button color="primary" (click)="openBag()">
           <mat-icon>shopping_cart</mat-icon>
         </button>
 
