--- a/src/app/inicio/content/content.component.html
+++ b/src/app/inicio/content/content.component.html
@@ -14,6 +14,10 @@
             <app-bag [autofix]="true" [showBtF]="service.getStatusBtbag()"></app-bag>
         </div>
 
+        <!--<div class="bag-responsive">
+            <app-bag [autofix]="true" [showBtF]="service.getStatusBtbag()"></app-bag>
+        </div>-->
+
     </div>
 
 </div>
