--- a/src/app/payment-steps/finish/finish.component.html
+++ b/src/app/payment-steps/finish/finish.component.html
@@ -10,7 +10,7 @@
 
         <div class="row">
             <div class="col-sm-12  mp0L">
-                <div class="col-sm-12" style="height: 138px;">
+                <div class="col-sm-12" style="min-height: 138px;">
 
                     <div class="row">
 
