--- a/src/app/inicio/select-address/select-address.component.html
+++ b/src/app/inicio/select-address/select-address.component.html
@@ -70,6 +70,6 @@ height: 150px;">
     </a>
 </div>
 
-<div class="col-sm-12" style="margin-top: 20px;">
+<!--<div class="col-sm-12" style="margin-top: 20px;">
     <button class="btAD" mat-flat-button color="warn" (click)="setAddress()"> Pronto </button>
-</div>
+</div>-->
